fixed bug -- spacing of player control icons shifted to much right

--- a/src/Components/Timer/SpotifyPlayer/SpotifyPlayer.module.css
+++ b/src/Components/Timer/SpotifyPlayer/SpotifyPlayer.module.css
@@ -5,7 +5,6 @@
   width: 50%;
 
   margin-top: -1rem;
-  padding-bottom: 1rem;
   border-radius: 10px;
 
   display: flex;
@@ -18,6 +17,8 @@
 }
 
 .playerControls {
+  margin-right: 1rem;
+  
   display: flex;
   justify-content: center;
   align-items: center;
@@ -28,10 +29,8 @@
   color: black;
 }
 
-.playerSeekTrack {
-  position: absolute;
-  bottom: 2rem;
-
+.playerTrackSlider {
+  margin-top: -0.5rem;
   font-size: 0.8rem;
 }
 
@@ -86,12 +85,12 @@
   margin-bottom: -0.5rem;
 }
 
-.trackSliderContainer {
+.volumeSlider {
   height: 4rem;
 
   position: absolute;
-  bottom: 6rem;
-  right: 8.8rem;
+  bottom: 7rem;
+  right: 8.3rem;
 }
 
 .playerSeekTime {
